# pfin-financial-analyst

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
airflow/: Dockerfile
data_pipeline/: companies.csv  database_utils.py  ingestion.py
database-scripts/: fin_tables.sql
documents/: Simple Financial Analyst in Python.md
tests/: test_ingestion.py
